Renamed all neon blocks

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -783,12 +783,14 @@
   "block.minecraft.jungle_wood": "Jungle Wood",
   "block.minecraft.acacia_wood": "Acacia Wood",
   "block.minecraft.dark_oak_wood": "Dark Oak Wood",
-  "block.minecraft.oak_log": "Oak Log",
-  "block.minecraft.spruce_log": "Spruce Log",
-  "block.minecraft.birch_log": "Birch Log",
-  "block.minecraft.jungle_log": "Jungle Log",
-  "block.minecraft.acacia_log": "Acacia Log",
-  "block.minecraft.dark_oak_log": "Dark Oak Log",
+  "block.minecraft.oak_log": "White Straight Neon",
+  "block.minecraft.spruce_log": "Purple Straight Neon",
+  "block.minecraft.birch_log": "Green Straight Neon",
+  "block.minecraft.jungle_log": "Yellow Straight Neon",
+  "block.minecraft.acacia_log": "Red Straight Neon",
+  "block.minecraft.dark_oak_log": "Blue Straight Neon",
+  "block.minecraft.crimson_stem": "Orange Straight Neon",
+  "block.minecraft.warped_stem": "Cyan Straight Neon",
   "block.minecraft.stripped_oak_log": "Stripped Oak Log",
   "block.minecraft.stripped_spruce_log": "Stripped Spruce Log",
   "block.minecraft.stripped_birch_log": "Stripped Birch Log",
@@ -1165,22 +1167,22 @@
   "block.minecraft.green_shulker_box": "Green Shulker Box",
   "block.minecraft.red_shulker_box": "Red Shulker Box",
   "block.minecraft.black_shulker_box": "Black Shulker Box",
-  "block.minecraft.white_glazed_terracotta": "White Glazed Terracotta",
-  "block.minecraft.orange_glazed_terracotta": "Orange Glazed Terracotta",
-  "block.minecraft.magenta_glazed_terracotta": "Magenta Glazed Terracotta",
-  "block.minecraft.light_blue_glazed_terracotta": "Light Blue Glazed Terracotta",
-  "block.minecraft.yellow_glazed_terracotta": "Yellow Glazed Terracotta",
-  "block.minecraft.lime_glazed_terracotta": "Lime Glazed Terracotta",
-  "block.minecraft.pink_glazed_terracotta": "Pink Glazed Terracotta",
-  "block.minecraft.gray_glazed_terracotta": "Gray Glazed Terracotta",
-  "block.minecraft.light_gray_glazed_terracotta": "Light Gray Glazed Terracotta",
-  "block.minecraft.cyan_glazed_terracotta": "Cyan Glazed Terracotta",
-  "block.minecraft.purple_glazed_terracotta": "Purple Glazed Terracotta",
-  "block.minecraft.blue_glazed_terracotta": "Blue Glazed Terracotta",
-  "block.minecraft.brown_glazed_terracotta": "Brown Glazed Terracotta",
-  "block.minecraft.green_glazed_terracotta": "Green Glazed Terracotta",
-  "block.minecraft.red_glazed_terracotta": "Red Glazed Terracotta",
-  "block.minecraft.black_glazed_terracotta": "Black Glazed Terracotta",
+  "block.minecraft.white_glazed_terracotta": "White Curved Neon",
+  "block.minecraft.orange_glazed_terracotta": "Orange Curved Neon",
+  "block.minecraft.magenta_glazed_terracotta": "Purple Diagonal Neon",
+  "block.minecraft.light_blue_glazed_terracotta": "Blue Diagonal Neon",
+  "block.minecraft.yellow_glazed_terracotta": "Yellow Curved Neon",
+  "block.minecraft.lime_glazed_terracotta": "Yellow Diagonal Neon",
+  "block.minecraft.pink_glazed_terracotta": "Orange Diagonal Neon",
+  "block.minecraft.gray_glazed_terracotta": "Cyan Diagonal Neon",
+  "block.minecraft.light_gray_glazed_terracotta": "White Diagonal Neon",
+  "block.minecraft.cyan_glazed_terracotta": "Cyan Curved Neon",
+  "block.minecraft.purple_glazed_terracotta": "Purple Curved Neon",
+  "block.minecraft.blue_glazed_terracotta": "Blue Curved Neon",
+  "block.minecraft.brown_glazed_terracotta": "Green Diagonal Neon",
+  "block.minecraft.green_glazed_terracotta": "Green Curved Neon",
+  "block.minecraft.red_glazed_terracotta": "Red Curved Neon",
+  "block.minecraft.black_glazed_terracotta": "Red Diagonal Neon",
   "block.minecraft.black_concrete": "Black Concrete",
   "block.minecraft.red_concrete": "Red Concrete",
   "block.minecraft.green_concrete": "Green Concrete",
